--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -1,9 +1,13 @@
 name: Sync fork from upstream
 
 on:
+  push:
+    branches: [ main, master ]
+    paths:
+      - ".github/workflows/sync-upstream.yml"
+  workflow_dispatch: {}
   schedule:
-    - cron: "17 6 * * *"   # Runs daily at 06:17 UTC
-  workflow_dispatch: {}     # Manual trigger
+    - cron: "17 6 * * *"   # note: cron won't auto-run in forks
 
 permissions:
   contents: write
@@ -19,24 +23,14 @@ jobs:
 
       - name: Add upstream and fetch
         run: |
-          # Detect repo name from the current origin
-          ORIGIN_URL=$(git remote get-url origin)
-          REPO=$(basename "$ORIGIN_URL" .git)
-          git remote add upstream https://github.com/sharonba99/$REPO.git || true
+          git remote add upstream https://github.com/sharonba99/<Game_maker
+>.git || true
           git fetch upstream
 
       - name: Rebase main on upstream/main
         run: |
           git checkout main || git checkout master
-          CURRENT_BRANCH=$(git branch --show-current)
-          # Try main first, fallback to master
-          if git rev-parse --verify upstream/main >/dev/null 2>&1; then
-            git rebase upstream/main || (git rebase --abort && exit 1)
-          else
-            git rebase upstream/master || (git rebase --abort && exit 1)
-          fi
+          git rebase upstream/main || (git rebase --abort && exit 1)
 
-      - name: Push updated default branch
-        run: |
-          # Push back to your fork
-          git push origin HEAD --force-with-lease
+      - name: Push updated branch
+        run: git push origin main --force-with-lease
